bk_ida/gobmkida/g2/getopt_internal
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/getopt_internal/src/utils/getopt.c:981:1: error: use of undeclared identifier '$58E8A322B99FFF983766F42E1DE15117'
$58E8A322B99FFF983766F42E1DE15117 v10; // r13d 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/getopt_internal/src/utils/getopt.c:1064:1: error: use of undeclared identifier 'v10'
v10 = RETURN_IN_ORDER; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/getopt_internal/src/utils/getopt.c:1070:1: error: use of undeclared identifier 'v10'
v10 = REQUIRE_ORDER; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/getopt_internal/src/utils/getopt.c:1076:1: error: use of undeclared identifier 'v10'
v10 = REQUIRE_ORDER; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/getopt_internal/src/utils/getopt.c:1081:1: error: use of undeclared identifier 'v10'
v10 = PERMUTE; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/getopt_internal/src/utils/getopt.c:1083:1: error: use of undeclared identifier '_getopt_initialized'; did you mean '__getopt_initialized'?
_getopt_initialized = 1; 
^~~~~~~~~~~~~~~~~~~
__getopt_initialized
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/getopt_internal/src/utils/getopt.c:132:5: note: '__getopt_initialized' declared here
int __getopt_initialized;
    ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/getopt_internal/src/utils/getopt.c:1088:7: error: use of undeclared identifier '_getopt_initialized'
if ( !_getopt_initialized ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/getopt_internal/src/utils/getopt.c:1099:1: error: use of undeclared identifier 'v10'
v10 = ordering; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/getopt_internal/src/utils/getopt.c:1106:6: error: use of undeclared identifier 'v10'
if ( v10 == PERMUTE ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/getopt_internal/src/utils/getopt.c:1177:6: error: use of undeclared identifier 'v10'
if ( v10 ) 
     ^
10 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/getopt_internal/src/obj/5/getopt.o] Error 1
